Colaboratory를 통해 생성됨

--- a/Untitled10.ipynb
+++ b/Untitled10.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPYD87wrP9SIvw9R12ZOrN1",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -28,26 +12,73 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(\"Hello World\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "-qwmln3iE4z6",
-        "outputId": "163e8458-7750-48d4-ded5-89c54d64f62d"
+        "id": "zxKkuXEeThCX",
+        "outputId": "52ba272d-01cc-4743-b9bf-29c623a63862"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Hello World\n"
+            "3\n",
+            "3 10 5\n",
+            "1 3 5 7 9\n"
           ]
         }
+      ],
+      "source": [
+        "TC = int(input())\n",
+        "\n",
+        "for i in range(1, TC+1):\n",
+        "    count = 0\n",
+        "    K,N,M = map(int, input().split())\n",
+        "    stations = list(map(int, input().split()))\n",
+        "\n",
+        "    now = 0\n",
+        "    charge_station = 0\n",
+        "    count = 0\n",
+        "    can_go = now + K\n",
+        "\n",
+        "    while(can_go<K):\n",
+        "      for i in stations:\n",
+        "        if now < i <= can_go:\n",
+        "          charge_station = i\n",
+        "        elif can_go < i:\n",
+        "          break\n",
+        "\n",
+        "      if charge_station == -1:\n",
+        "        count = 0\n",
+        "        break\n",
+        "\n",
+        "now = charge_station\n",
+        "can_go = now + K\n",
+        "count += 1\n",
+        "charge_station = -1\n",
+        "\n",
+        "print(f'#{i} {count}')\n",
+        "\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyNVgzeb7xxYqdVuY75Ex7r6",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
